# lightningNet

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: main.rs
src/node/: config.rs  lightning_node.rs  mod.rs  types.rs
