[package]
name = "lightning-net"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
hex = "0.4"
lazy_static = "1.4"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"